--- a/src/components/hacked.astro
+++ b/src/components/hacked.astro
@@ -1,5 +1,5 @@
-<script>
-const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ.";
+<script lang="js">
+const letters = "abcdefghijklmnopqrstuvwxyz.";
 
 let interval = null;
 
