--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,12 +1,9 @@
 ---
-import home from '/assets/logo.png'
 import projects from '/assets/projects.svg'
 import contact from '/assets/contact.svg'
 ---
 <nav>
-    <input type="checkbox" />
-    <a href="/"><img src={home} alt="Accueil"/></a>
-    <a href="/projects"><img src={projects} alt="Projets"/></a>
+    <a href="/" class="navtitle">curier.dev</a>
+    <a href="/projects" class="push"><img src={projects} alt="Projets"/></a>
     <a href="/contact"><img src={contact} alt="Contact"/></a>
-    <h1 href="/" class="navtitle" data-value="curier.dev">curier.dev</h1>
 </nav>
