--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,50 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 body {
     background-color: #0D1117;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav {
+
     display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
     align-items: center;
     background-color: #1F2937;
     border-radius: 10px 10px 10px 10px;
-    
+    width: 100%;
 
     img {
+        opacity: 0;
+        transform: translateY(-100%);
+        animation-name: slideIn;
+        animation-duration: 0.5s;
+        animation-fill-mode: forwards;
+
         width: 3rem;
-        height: 3rem;
-        margin-right: 1rem;
-        margin-left: 1rem;
+        left: 0;
+        margin: 1rem;
+    }
+
+    .push {
+        margin-left: auto;
     }
 
     .navtitle {
+        opacity: 0;
+        transform: translateY(-100%);
+        animation-name: slideIn;
+        animation-duration: 0.5s;
+        animation-fill-mode: forwards;
+        
+        text-decoration: none;
         color: white;
         font-size: 3rem;
-        margin-left: calc(50% - 25rem);
         text-transform: uppercase;
         border-radius: clamp(0.4rem, 0.75vw, 1rem);
-        padding: 0rem clamp(1rem, 2vw, 3rem);
+        padding: 0.5rem 1rem;
+
+        transition: all 0.3s ease;
 
         &:hover {
-            background-color: white;
-            width: 18rem;
-            color: black
+            background-color: #4B5563;
+            transition: all 0.3s ease;
         }
     }
 
-    input {display: none;}
 }
 
-h1 {
-    color: white;
-    font-size: 3rem;
-    font-weight: 200;
-    text-align: center;
-    margin: 1rem;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+    h1 {
+        font-size: clamp(2rem, 5vw, 4rem);
+        color: white;
+        text-align: center;
+        margin: 0 auto;
+        padding: 0;
+    }
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
 
 /* breakpoint at 768px */
 @media screen and (max-width: 768px) {
+nav {
+    .navtitle {
+        font-size: 2rem !important;
+    }
+
+    img {
+        width: 2rem !important;
+        margin: 0.5rem !important;
+    }
+}
+}
+
+@media screen and (max-width: 375px) {
+    nav {
+        .navtitle {
+            font-size: 1.5rem !important;
+        }
+
+        img {
+            width: 1.5rem !important;
+            margin: 0.5rem !important;
+        }
+    }
 }
