--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@ body {
 }
 
 nav {
-
+    transition: all 0.3s ease;
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
@@ -23,8 +23,17 @@ nav {
         animation-fill-mode: forwards;
 
         width: 3rem;
+        height: 3rem;
         left: 0;
         margin: 1rem;
+
+        transition: all 0.3s ease;
+
+        &:hover {
+            background-color: #4B5563;
+            border-radius: 50%;
+            transition: all 0.3s ease;
+        }
     }
 
     .push {
