--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -14,7 +14,7 @@ import { Flamethrower } from "astro-flamethrower";
     <div class="container">
         <slot />
     </div>
-    <Flamethrower color="#009ed3"/>
+    <Flamethrower color="#00000"/>
   </body>
 </html>
 <Hacked/>
