--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/layout.astro'
 ---
+<html lang="fr">
 <Layout>
   <h1 data-value="Contact">Contact</h1>
 </Layout>
+</html>
