--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/layout.astro'
 ---
+<html lang="fr">
 <Layout>
   <h1 data-value="Curier.dev">Curier.dev</h1>
 </Layout>
+</html>
