--- a/src/components/hacked.astro
+++ b/src/components/hacked.astro
@@ -1,30 +1,23 @@
-<script lang="js">
-var letters = "abcdefghijklmnopqrstuvwxyz.";
-
+<script data-reload>
+var h1 = document.querySelector("h1");
+var iteration = 0;
 var interval = null;
 
-document.querySelector("h1").onmouseover = event => {  
-  let iteration = 0;
-  
-  clearInterval(interval);
-  
-  var interval = setInterval(() => {
-    event.target.innerText = event.target.innerText
-      .split("")
-      .map((letter, index) => {
-        if(index < iteration) {
-          return event.target.dataset.value[index];
-        }
-      
-        return letters[Math.floor(Math.random() * 26)]
-      })
-      .join("");
-    
-    if(iteration >= event.target.dataset.value.length){ 
-      clearInterval(interval);
-    }
-    
-    iteration += 1 / 3;
-  }, 30);
-}
+interval = setInterval(() => {
+  h1.innerText = h1.innerText
+    .split("")
+    .map((letter, index) => {
+      if (index < iteration) {
+        return h1.dataset.value[index];
+      }
+      return String.fromCharCode(Math.floor(Math.random() * 26) + 97);
+    })
+    .join("");
+
+  if (iteration >= h1.dataset.value.length) {
+    clearInterval(interval);
+  }
+
+  iteration += 1 / 3;
+}, 30);
 </script>
