--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/layout.astro'
 ---
+<html lang="fr">
 <Layout>
   <h1 data-value="Projets">Projets</h1>
 </Layout>
+</html>
