🔥 Add firebase and refactor hacked effect

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,7 +3,7 @@ import projects from '/assets/projects.svg'
 import contact from '/assets/contact.svg'
 ---
 <nav>
-    <a href="/" class="navtitle">curier.dev</a>
-    <a href="/projects" class="push"><img src={projects} alt="Projets"/></a>
-    <a href="/contact"><img src={contact} alt="Contact"/></a>
+    <a href="/" class="animate navtitle">curier.dev</a>
+    <a href="/projects" class="animate push"><img src={projects} alt="Projets"/></a>
+    <a href="/contact" class="animate"><img src={contact} alt="Contact"/></a>
 </nav>
