--- a/src/components/hacked.astro
+++ b/src/components/hacked.astro
@@ -1,23 +1,29 @@
 <script data-reload>
-var h1 = document.querySelector("h1");
-var iteration = 0;
-var interval = null;
+var letters = "abcdefghijklmnopqrstuvwxyz";
+var h1Element = document.querySelector("h1");
 
-interval = setInterval(() => {
-  h1.innerText = h1.innerText
-    .split("")
-    .map((letter, index) => {
-      if (index < iteration) {
-        return h1.dataset.value[index];
-      }
-      return String.fromCharCode(Math.floor(Math.random() * 26) + 97);
-    })
-    .join("");
+var interval = setInterval(() => {
+  var iteration = 0;
+  clearInterval(interval);
 
-  if (iteration >= h1.dataset.value.length) {
-    clearInterval(interval);
-  }
+  interval = setInterval(() => {
+    h1Element.innerText = h1Element.innerText
+      .split("")
+      .map((letter, index) => {
+        if(index < iteration) {
+          return h1Element.dataset.value[index];
+        }
 
-  iteration += 1 / 3;
-}, 30);
+        return letters[Math.floor(Math.random() * 26)]
+      })
+      .join("");
+
+    if(iteration >= h1Element.dataset.value.length){
+      clearInterval(interval);
+    }
+
+    iteration += 1 / 3;
+  }, 30);
+}, 0); // change the interval time in milliseconds to start the animation
+
 </script>
