--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -2,6 +2,7 @@
 import '../styles/main.scss';
 import Metadata from '@components/metadata.astro';
 import Header from '@components/header.astro';
+import Footer from '@components/footer.astro';
 import Hacked from '@components/hacked.astro';
 import { Flamethrower } from "astro-flamethrower";
 ---
@@ -14,6 +15,7 @@ import { Flamethrower } from "astro-flamethrower";
     <div class="container">
         <slot />
     </div>
+    <Footer/>
     <Flamethrower color="#00000"/>
   </body>
 </html>
