--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -3,6 +3,7 @@ import '../styles/main.scss';
 import Metadata from '@components/metadata.astro';
 import Header from '@components/header.astro';
 import Footer from '@components/footer.astro';
+import Animation from '@components/animation.astro';
 import Hacked from '@components/hacked.astro';
 import { Flamethrower } from "astro-flamethrower";
 ---
@@ -20,3 +21,4 @@ import { Flamethrower } from "astro-flamethrower";
   </body>
 </html>
 <Hacked/>
+<Animation/>
