💄 Add code logos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/layout.astro'
+import Skills from '@components/skills.astro';
 ---
 <html lang="fr">
 <Layout>
   <h1 data-value="Curier.dev">Curier.dev</h1>
+  <Skills />
 </Layout>
 </html>
