--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,7 @@ nav {
     }
 
     .navtitle {
-        
+
         text-decoration: none;
         color: white;
         font-size: 3rem;
@@ -62,6 +62,14 @@ nav {
     animation-fill-mode: forwards;
 }
 
+.animate-out {
+    opacity: 1;
+    transform: translateY(0%);
+    animation-name: slideOut;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -69,6 +77,7 @@ nav {
     justify-content: center;
     margin: 0 auto;
     width: 100%;
+
     h1 {
         font-size: clamp(2rem, 5vw, 4rem);
         color: white;
@@ -79,14 +88,39 @@ nav {
 }
 
 @keyframes slideIn {
-  0% {
-    opacity: 0;
-    transform: translateY(-100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+@keyframes slide-right {
+    0% {
+        transform: translate(-50%, 50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-left {
+    0% {
+        transform: translate(50%, 50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translate(0, 0);
+        opacity: 1;
+    }
 }
 
 footer {
@@ -121,29 +155,99 @@ footer {
     height: 30px;
 }
 
-/* breakpoint at 768px */
-@media screen and (max-width: 768px) {
-nav {
-    .navtitle {
-        font-size: 2rem !important;
+.skills {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    .html,
+    .css {
+        animation: slide-right 1s ease-in-out;
+
+    }
+
+    .js,
+    .python {
+        animation: slide-left 1s ease-in-out;
     }
 
     img {
-        width: 2rem !important;
-        margin: 0.5rem !important;
+        width: 275px;
+        height: 275px;
+        margin: 40px;
+        margin-top: 100px;
+        filter: grayscale(100%);
+        transition: all 0.3s ease;
+
+        &:hover {
+            filter: grayscale(0%);
+            transition: all 0.3s ease;
+        }
+
     }
 }
+
+
+@media screen and (max-width: 1440px) {
+    .skills img {
+        width: 200px;
+        height: 200px;
+        margin: 20px;
+        margin-top: 75px;
+    }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
+    .skills {
+        flex-wrap: wrap;
+    }
+
+    .skills img {
+        flex-basis: calc(50% - 40px);
+        justify-content: center;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 768px) {
     nav {
         .navtitle {
-            font-size: 1.5rem !important;
+            font-size: 2rem;
         }
 
         img {
-            width: 1.75rem !important;
-            margin: 0.5rem !important;
+            width: 2rem;
+            margin: 0.5rem;
         }
+    }
+
+    .skills img {
+        width: 150px;
+        height: 150px;
+        margin: 10px;
+        margin-top: 50px;
+    }
+
+}
+
+@media screen and (max-width: 425px) {
+    nav {
+        .navtitle {
+            font-size: 1.5rem;
+        }
+
+        img {
+            width: 1.75rem;
+            margin: 0.5rem;
+        }
+    }
+
+    .skills img {
+        width: 125px;
+        height: 125px;
+        margin: 12px;
+        margin-top: 30px;
     }
 }
