--- a/src/components/animation.astro
+++ b/src/components/animation.astro
@@ -1,11 +1,10 @@
 <script>
-var a = document.getElementsByTagName('a');
-for (var i = 0; i < 3; i++) {
-  a[i].className += ' animate';
-  setTimeout(function() {
-    a[i].className = a[i].className.replace(' animate', '');
-  }, 1);
-}
+  var a = document.getElementsByTagName("a");
+  for (var i = 0; i < 3; i++) {
+    a[i].className += " animate";
+    setTimeout(function () {
+      a[i].className = a[i].className.replace(" animate", "");
+    }, 1);
+  }
 </script>
-<script data-reload src="/scripts/hacked.js">
-</script>
+<script data-reload src="/scripts/hacked.js"></script>
