--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,17 @@
 <footer>
-    <a href="https://www.linkedin.com/in/ulysse-curier-5b8069259/" class="linkedin" target="_blank" aria-label="Mon profil Linkedin"></a>
-    <a href="https://github.com/Ulyssedev" class="github" target="_blank" aria-label="Mon profil Github"></a>
-    <a href="mailto:ulysse@curier.ovh" class="mail" target="_blank" aria-label="Mon adresse mail"></a>
+  <a
+    href="https://www.linkedin.com/in/ulysse-curier-5b8069259/"
+    class="linkedin"
+    target="_blank"
+    aria-label="Mon profil Linkedin"></a>
+  <a
+    href="https://github.com/Ulyssedev"
+    class="github"
+    target="_blank"
+    aria-label="Mon profil Github"></a>
+  <a
+    href="mailto:ulysse@curier.ovh"
+    class="mail"
+    target="_blank"
+    aria-label="Mon adresse mail"></a>
 </footer>
