--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,9 +1,10 @@
 ---
-import projects from '/assets/projects.svg'
-import contact from '/assets/contact.svg'
+import projects from "/assets/projects.svg";
+import contact from "/assets/contact.svg";
 ---
+
 <nav>
-    <a href="/" class="navtitle">curier.dev</a>
-    <a href="/projects" class="push"><img src={projects} alt="Projets"/></a>
-    <a href="/contact"><img src={contact} alt="Contact"/></a>
+  <a href="/" class="navtitle">curier.dev</a>
+  <a href="/projects" class="push"><img src={projects} alt="Projets" /></a>
+  <a href="/contact"><img src={contact} alt="Contact" /></a>
 </nav>
