--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -1,12 +1,13 @@
 ---
-import css_logo from '/assets/css.svg';
-import html_logo from '/assets/html.svg';
-import js_logo from '/assets/js.svg';
-import python_logo from '/assets/python.svg';
+import css_logo from "/assets/css.svg";
+import html_logo from "/assets/html.svg";
+import js_logo from "/assets/js.svg";
+import python_logo from "/assets/python.svg";
 ---
+
 <div class="skills">
-    <img src={html_logo} class="html" alt="HTML"/>
-    <img src={css_logo} class="css" alt="CSS"/>
-    <img src={js_logo} class="js" alt="JavaScript"/>
-    <img src={python_logo} class="python" alt="Python"/>
+  <img src={html_logo} class="html" alt="HTML" />
+  <img src={css_logo} class="css" alt="CSS" />
+  <img src={js_logo} class="js" alt="JavaScript" />
+  <img src={python_logo} class="python" alt="Python" />
 </div>
