--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
-import Layout from '../layouts/layout.astro'
-import Skills from '@components/skills.astro';
+import Layout from "../layouts/layout.astro";
+import Skills from "@components/skills.astro";
 ---
+
 <html lang="fr">
-<Layout>
-  <h1 data-value="Curier.dev">Curier.dev</h1>
-  <Skills />
-</Layout>
+  <Layout>
+    <h1 data-value="Curier.dev">Curier.dev</h1>
+    <Skills />
+  </Layout>
 </html>
