--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,8 +1,9 @@
 ---
-import Layout from '../layouts/layout.astro'
+import Layout from "../layouts/layout.astro";
 ---
+
 <html lang="fr">
-<Layout>
-  <h1 data-value="Projets">Projets</h1>
-</Layout>
+  <Layout>
+    <h1 data-value="Projets">Projets</h1>
+  </Layout>
 </html>
