--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,253 +1,246 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap");
 
 body {
-    background-color: #0D1117;
-    font-family: 'Montserrat', sans-serif;
+  background-color: #0d1117;
+  font-family: "Montserrat", sans-serif;
 }
 
 nav {
+  transition: all 0.3s ease;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  align-items: center;
+  background-color: #1f2937;
+  border-radius: 10px 10px 10px 10px;
+  width: 100%;
+
+  img {
+    width: 3rem;
+    height: 3rem;
+    left: 0;
+    margin: 1rem;
+
     transition: all 0.3s ease;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: space-between;
-    align-items: center;
-    background-color: #1F2937;
-    border-radius: 10px 10px 10px 10px;
-    width: 100%;
 
-    img {
-
-        width: 3rem;
-        height: 3rem;
-        left: 0;
-        margin: 1rem;
-
-        transition: all 0.3s ease;
-
-        &:hover {
-            background-color: #4B5563;
-            border-radius: 50%;
-            transition: all 0.3s ease;
-        }
+    &:hover {
+      background-color: #4b5563;
+      border-radius: 50%;
+      transition: all 0.3s ease;
     }
+  }
 
-    .push {
-        margin-left: auto;
+  .push {
+    margin-left: auto;
+  }
+
+  .navtitle {
+    text-decoration: none;
+    color: white;
+    font-size: 3rem;
+    text-transform: uppercase;
+    border-radius: clamp(0.4rem, 0.75vw, 1rem);
+    padding: 0.5rem 1rem;
+
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #4b5563;
+      transition: all 0.3s ease;
     }
-
-    .navtitle {
-
-        text-decoration: none;
-        color: white;
-        font-size: 3rem;
-        text-transform: uppercase;
-        border-radius: clamp(0.4rem, 0.75vw, 1rem);
-        padding: 0.5rem 1rem;
-
-        transition: all 0.3s ease;
-
-        &:hover {
-            background-color: #4B5563;
-            transition: all 0.3s ease;
-        }
-    }
-
+  }
 }
 
 .animate {
-    opacity: 0;
-    transform: translateY(-100%);
-    animation-name: slideIn;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
+  opacity: 0;
+  transform: translateY(-100%);
+  animation-name: slideIn;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
 .animate-out {
-    opacity: 1;
-    transform: translateY(0%);
-    animation-name: slideOut;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
+  opacity: 1;
+  transform: translateY(0%);
+  animation-name: slideOut;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100%;
 
-    h1 {
-        font-size: clamp(2rem, 5vw, 4rem);
-        color: white;
-        text-align: center;
-        margin: 0 auto;
-        padding: 0;
-    }
+  h1 {
+    font-size: clamp(2rem, 5vw, 4rem);
+    color: white;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+  }
 }
 
 @keyframes slideIn {
-    0% {
-        opacity: 0;
-        transform: translateY(-100%);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateY(0%);
-    }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
 
 @keyframes slide-right {
-    0% {
-        transform: translate(-50%, 50%);
-        opacity: 0;
-    }
+  0% {
+    transform: translate(-50%, 50%);
+    opacity: 0;
+  }
 
-    100% {
-        transform: translate(0, 0);
-        opacity: 1;
-    }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
 }
 
 @keyframes slide-left {
-    0% {
-        transform: translate(50%, 50%);
-        opacity: 0;
-    }
+  0% {
+    transform: translate(50%, 50%);
+    opacity: 0;
+  }
 
-    100% {
-        transform: translate(0, 0);
-        opacity: 1;
-    }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
 }
 
 footer {
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: 100;
-    text-decoration: none;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 100;
+  text-decoration: none;
 }
 
 .linkedin {
-    content: url('https://api.iconify.design/mdi/linkedin.svg?color=white');
-    width: 30px;
-    height: 30px;
+  content: url("https://api.iconify.design/mdi/linkedin.svg?color=white");
+  width: 30px;
+  height: 30px;
 }
 
 .mail {
-    content: url('https://api.iconify.design/mdi/email.svg?color=white');
-    width: 30px;
-    height: 30px;
+  content: url("https://api.iconify.design/mdi/email.svg?color=white");
+  width: 30px;
+  height: 30px;
 }
 
 .github {
-    content: url('https://api.iconify.design/mdi/github.svg?color=white');
-    width: 30px;
-    height: 30px;
+  content: url("https://api.iconify.design/mdi/github.svg?color=white");
+  width: 30px;
+  height: 30px;
 }
 
 .skills {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 
-    .html,
-    .css {
-        animation: slide-right 1s ease-in-out;
+  .html,
+  .css {
+    animation: slide-right 1s ease-in-out;
+  }
 
+  .js,
+  .python {
+    animation: slide-left 1s ease-in-out;
+  }
+
+  img {
+    width: 275px;
+    height: 275px;
+    margin: 40px;
+    margin-top: 100px;
+    filter: grayscale(100%);
+    transition: all 0.3s ease;
+
+    &:hover {
+      filter: grayscale(0%);
+      transition: all 0.3s ease;
     }
-
-    .js,
-    .python {
-        animation: slide-left 1s ease-in-out;
-    }
-
-    img {
-        width: 275px;
-        height: 275px;
-        margin: 40px;
-        margin-top: 100px;
-        filter: grayscale(100%);
-        transition: all 0.3s ease;
-
-        &:hover {
-            filter: grayscale(0%);
-            transition: all 0.3s ease;
-        }
-
-    }
+  }
 }
 
-
 @media screen and (max-width: 1440px) {
-    .skills img {
-        width: 200px;
-        height: 200px;
-        margin: 20px;
-        margin-top: 75px;
-    }
+  .skills img {
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+    margin-top: 75px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
-    .skills {
-        flex-wrap: wrap;
-    }
+  .skills {
+    flex-wrap: wrap;
+  }
 
-    .skills img {
-        flex-basis: calc(50% - 40px);
-        justify-content: center;
-        flex-direction: column;
-    }
+  .skills img {
+    flex-basis: calc(50% - 40px);
+    justify-content: center;
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    nav {
-        .navtitle {
-            font-size: 2rem;
-        }
-
-        img {
-            width: 2rem;
-            margin: 0.5rem;
-        }
+  nav {
+    .navtitle {
+      font-size: 2rem;
     }
 
-    .skills img {
-        width: 150px;
-        height: 150px;
-        margin: 10px;
-        margin-top: 50px;
+    img {
+      width: 2rem;
+      margin: 0.5rem;
     }
+  }
 
+  .skills img {
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    margin-top: 50px;
+  }
 }
 
 @media screen and (max-width: 425px) {
-    nav {
-        .navtitle {
-            font-size: 1.5rem;
-        }
-
-        img {
-            width: 1.75rem;
-            margin: 0.5rem;
-        }
+  nav {
+    .navtitle {
+      font-size: 1.5rem;
     }
 
-    .skills img {
-        width: 125px;
-        height: 125px;
-        margin: 12px;
-        margin-top: 30px;
+    img {
+      width: 1.75rem;
+      margin: 0.5rem;
     }
+  }
+
+  .skills img {
+    width: 125px;
+    height: 125px;
+    margin: 12px;
+    margin-top: 30px;
+  }
 }
